--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-streamlit==1.39.0
-pandas==1.5.3
-numpy==1.26.4
-seaborn==0.13.2
-matplotlib==3.9.2
-plotly==5.24.1
-wordcloud==1.9.3
-scikit-learn==1.5.2
+streamlit~=1.39.0
+pandas~=2.2.3
+numpy~=2.1.2
+seaborn~=0.13.2
+matplotlib~=3.9.2
+plotly~=5.24.1
+wordcloud~=1.9.3
+scikit-learn~=1.5.2
+statsmodels~=0.14.4
+requests~=2.32.3
+beautifulsoup4~=4.12.3
